<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Sch\u00FCtzenfest 2012 in Davensberg</string>
    <string name="veranstaltungskalender_titel">Veranstaltungen</string>
    <string name="wetter_titel">Wettervorhersage für Davensberg</string>
    <string name="googlemapstxt">Google Maps</string>
    <string name="toasttext">Gugglaskdjflakjf alsfkdj asfd</string>
    <string name="mittwochMapsLoadingText">Einen Moment bitte… Google Maps wird gestartet!</string>
    <string name="burgturmGeo">geo:0,0?q=51.82073,7.59207 (Burgturm)&amp;z=8</string>
    <string name="haverkampGeo">geo:0,0?q=51.820099,7.596008 (Gasthaus \"Zur Davert\" Haverkamp)&amp;z=8</string>
    <string name="vogelstangeGeo">geo:0,0?q=51.820242,7.599717 (Vogelstange am Telgenpatt)&amp;z=8</string>
    <string name="alteKoenigGeo">geo:0,0?q=51.820242,7.599717 (Alter Koenig)&amp;z=8</string>
    <string name="neuerKoenigGeo">geo:0,0?q=51.820242,7.599717 (Neuer Koenig)&amp;z=8</string>

    <string name="MenuItem1">Beenden</string>

    <style name="root_layout">
        <item name="android:orientation">vertical</item>
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">fill_parent</item>
    </style>

    <style name="window_title_bar">
        <item name="android:textSize">16.0dip</item>
        <item name="android:textStyle">bold</item>
        <item name="android:gravity">center</item>
        <item name="android:paddingTop">5.0dip</item>
        <item name="android:paddingBottom">5.0dip</item>
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:shadowColor">#ff000000</item>
        <item name="android:shadowDx">1.0</item>
        <item name="android:shadowDy">1.0</item>
        <item name="android:shadowRadius">1.0</item>
    </style>

    <string name="widget_text">Sch\u00FCtzenfest 2012 Countdown (2x1)</string>
    <string name="widget_text_1">…loading…</string>
    <string name="widget_text_2"></string>
    <string name="beenden">Beenden</string>
    <string name="mittwoch_titel">Mittwoch - 06.06.2012</string>
    <string name="mittwoch_content_text_1">ab 20:00 Uhr: Rockfestival mit DJ Daniel        <!--
        <li>
            <ol>ab 20:00 Uhr: Rockfestival mit DJ Daniel 
            </ol>
        </li>
        -->

    </string>
    <string name="Button_1">Mittwoch</string>
    <string name="Button_2">Donnerstag</string>
    <string name="Button_3">Freitag</string>
    <string name="Button_4">Samstag</string>
    <string name="Button_5">Sonntag</string>
    <string name="Button_6">Wetter</string>
    <string name="donnerstag_0">Donnerstag - 07.06.2012</string>
    <string name="donnerstag_1"><u>Zelteinweihung für Jung &amp; Alt</u></string>
    <string name="donnerstag_2">ab 14:30 Uhr gemütliches Beisammensein </string>
    <string name="donnerstag_3">– Klönen bei Kaffee &amp; Kuchen –</string>
    <string name="donnerstag_4"><u>Unser Angebot im Zelt:</u></string>
    <string name="donnerstag_5">Ein Stück selbstgemachter Kuchen &amp; Pott Kaffee für <u>nur</u> 4,00  &#8364;</string>
    <string name="donnerstag_6">*   *   *   *</string>
    <string name="donnerstag_7"><u>Für die Kinder steht eine Hüpfburg bereit</u></string>
    <string name="donnerstag_8">*   *   *   *</string>
    <string name="donnerstag_9">Anschließend gehen wir zum gemütlichen Dämmerschoppen über!</string>
    
    <string name="freitag_1"><ol><li>  Antreten am Burgturm\n</li><li>  Abholen der Majestät\n</li><li>  Fahnenschlag am Dorfanger \n</li><li>  Abmarsch zur Vogelstange\n</li><li>  Parole\n</li><li>  Ernennung der neuen Wache</li></ol></string>
    <string name="freitag_2">Für die Kinder dreht der \u0022Pängelanton\u0022 wieder seine Runden</string>
    <string name="freitag_3"><ol><li>  Vogelschießen am Telgenpatt (##Blasorchester Billerbeck##)</li></ol></string>
    <string name="freitag_4"><ol><li>  Abmarsch zum Festzelt mit anschließender \u0022Inthronisation\u0022\n</li><li>  gemütlicher Bierabend <u>mit Musik und Tanz im Festzelt</u> (##Musik Factory##)</li></ol></string>
    
    <string name="samstag_1"><ol><li>  Antreten am Burgturm\n</li><li>  Abholen der Majestät</li></ol></string>
    <string name="samstag_2"><ol><li>  Gottesdienst\n</li><li>  anschließend Kranzniederlegung\n</li><li>  Antreten auf dem <u>Wiedau</u>\n</li><li>  Umzug zum Festzelt</li></ol></string>
    <string name="samstag_3"><ol><li>  Fahnenschlag am Burgturm und danach Platzkonzert am Festzelt (##Blasorchester Billerbeck \u0026 Spielmannszug Ascheberg##)</li></ol></string>
    <string name="samstag_4"><ol><li>  Großer Zapfenstreich im \u0022Wäldchen\u0022 bei Haverkamp durch (##Blasorchester Billerbeck und Spielmannszug Ascheberg##)</li></ol>\n\n(während des Zapfenstreiches erfolgt weder Thekenbetrieb noch Bewirtung: wir bitten dafür um Verständnis)</string>
    <string name="samstag_5"><ol><li>  Einmarsch des neuen Königspaares mit Hofstaat, Vorstand und Offizieren zum Festball</li></ol>\n\n anschließend Großer Festabend mit ##GIGOLOS Livemusic##\n\n<b>Um festliche Abendgarderobe wird gebeten</b></string>
    <string name="samstag_6"><u>Public Viewing</u>\n\n
                             <ol><li>  Übertragung des EM-Spiels Deutschland - Portugal auf Großbildleinwand im Zelt</li></ol></string>
    <string name="samstag_7"><ol><li>  Fortsetzung des Festabends</li></ol></string>
    
    <string name="sonntag_1"><ol><li>  Einmarsch des Königspaares mit Hofstaat, Vorstand und Offizieren in das Festzelt\n</li><li>  Ehrungen</li></ol>\n\n<b>musikalischer Frühschoppen mit Schunkel- und Blasmusik mit den ##Turmbläsern Davensberg##</b>\n\n <b>Für einen geselligen Tisch für unsere Senioren ist gesorgt</b></string>
    <string name="sonntag_2"><ol><li>  lockerer Ausklang des Schützenfestes 2012 mit DJ-Musik</li></ol></string>
    
    <string name="davertliedTitel">Davertlied</string>
    <string name="davertliedStrophe_1">Dort, wo die Burg am gr\u00FCnen Emmerstrande \n 
                                       vom hohen Berg gar stolz hernieder schaut, \n
                                       wo sie wie es bekannt im ganzen Lande, \n
                                       ein alt Geschlecht in grauer Zeit erbaut: \n
                                       :Dort m\u00F6cht\u0027 ich sein, :und von den steilen H\u00F6hn \n
                                       wohl in die weite Davert sehn.</string>
    <string name="davertliedStrophe_2">Wo Eichenw\u00E4lder stolz in L\u00FCfte ragen, \n
                                       in Wipfeln hoch sich wiegt des Habichts Horst, \n
                                       wo in den Heiden sitzen dicke Hasen, \n
                                       und Rehe wechseln scheu von Forst zu Forst: \n
                                       :Dort m\u00F6cht\u0027 ich sein, :wenn laut die B\u00FCchse knallt, \n
                                       und\u0027s Jagdhorn durch die W\u00E4lder schallt.</string>
                                       
    <string name="davertliedStrophe_3">Wo F\u00FCchse schlau vom Hof die Hennen stehlen, \n
                                       der Grimbart einsam durch die W\u00E4lder schleicht, \n
                                       wo J\u00E4ger oft die Schnepf im Fluge fehlen, \n
                                       wenn sie des Abends durch die D\u00E4mmerung streicht: \n
                                       :Dort m\u00F6cht\u0027 ich gern, :wenn linde L\u00FCfte wehn, \n
                                       die Schnepf im Zickzackzuge sehn.</string>
                                           
    <string name="davertliedStrophe_4">Wo tief versteckt der Wild\u0027rer n\u00E4chtlich lauert, \n
                                       des Schenk\u0027walds Meute durch die L\u00FCfte fährt, \n
                                       und wo der Spuk am Kieselsteine kauert, \n
                                       das graue M\u00E4nnchen oft den Wand\u0027rer st\u00F6rt: \n
                                       :Dort triffst Du an :den k\u00FChnen J\u00E4gersmann, \n
                                       ihn heimelts stets die Davert an.</string>
                                                                          
    <string name="davertliedStrophe_5">Ein jedes Land hat seine eig\u0027nen Weisen; \n
                                       ein jedes Land gibt Stoff zu einem Lied; \n
                                       drum mu\u00DF ich mir die alte Davert preisen, \n
                                       wo\u0027s Heidebl\u00FCmchen, wo der Ginster bl\u00FCht. \n
                                       :Und schlaf ich ein, :dann m\u00F6cht\u0027 im Eichenhain \n
                                       der Davert ich begraben sein.</string>
</resources>
