<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/davertliedTitel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="3dp"
                android:text="@string/davertliedTitel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/davertliedStrophe_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="3dp"
                android:text="@string/davertliedStrophe_1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/davertliedStrophe_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="3dp"
                android:text="@string/davertliedStrophe_2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/davertliedStrophe_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="3dp"
                android:text="@string/davertliedStrophe_3"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/davertliedStrophe_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="3dp"
                android:text="@string/davertliedStrophe_4"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/davertliedStrophe_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="30dp"
                android:text="@string/davertliedStrophe_5"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>