<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="200px"
        android:contentDescription="@string/burgturmGeo"
        android:src="@drawable/logo_android_app" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="@drawable/background">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/background">
        </TableRow>
    </TableLayout>

    <ScrollView
        android:id="@+id/ScrollView01"
        style="@style/root_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white" >

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TableRow
                android:id="@+id/TableRow01"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" 
                android:paddingTop="20.0dip"
                android:paddingLeft="20.0dip"
                android:paddingRight="20.0dip">

                <LinearLayout
                    android:id="@+id/LinearLayout01"
                    android:layout_width="150sp"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" 
                    android:paddingLeft="20.0dip"
                    android:paddingRight="20.0dip"
                    >

                    <ImageButton
                        android:id="@+id/ImageButton03"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/background" 
                        android:layout_gravity="center_horizontal"
                        android:onClick="mapsClicked"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Button_1" />

                    <ImageButton
                        android:id="@+id/ImageButton01"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/background" 
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Button_3" />

                    <ImageButton
                        android:id="@+id/ImageButton02"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/background" 
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Button_5" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="150sp"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" 
                    android:paddingLeft="20.0dip"
                    android:paddingRight="20.0dip">

                    <ImageButton
                        android:id="@+id/imageButton12"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/background" 
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Button_2" />

                    <ImageButton
                        android:id="@+id/imageButton22"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/background" 
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Button_4" />

                    <ImageButton
                        android:id="@+id/imageButton32"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:onClick="wetterClicked"
                        android:src="@drawable/sunny" 
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Button_6" />

                </LinearLayout>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >
            </TableRow>
        </TableLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/scrollView1"
        style="@style/root_layout"
        android:background="@android:color/white" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            style="@style/root_layout" >

<!--             <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonClicked"
                android:text="@string/googlemapstxt"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="zweiteSeite"
                android:text="Zweite Seite" /> -->

            <CheckBox
                android:id="@+id/showNotifications"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="notifChange"
                android:textColor="@android:color/black"
                android:text=" Benachrichtigung über Events" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>