<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ScrollView style="@style/root_layout" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- <TextView android:text="@string/insurance_content_text_2"  style="@style/default_text.with_paddings" /> -->

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:text="15:00 Uhr"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/samstag_1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/samstag_1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:text="16:00 Uhr"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/samstag_2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/samstag_2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:text="17:30 Uhr"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/samstag_3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/samstag_3"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/TextView07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:text="19:15 Uhr"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/samstag_4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/samstag_4"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/TextView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:text="20:00 Uhr"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/samstag_5"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/samstag_5"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/TextView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:text="20:45 Uhr"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/samstag_6"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/samstag_6"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:text="22:30 Uhr"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/samstag_7"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>